# pine2ast

./: .gitignore  BUILTIN_COVERAGE_FINAL.json  BUILTIN_COVERAGE_v2_10_0.json  BUILTIN_COVERAGE_v2_12_0.json  BUILTIN_COVERAGE_v2_13_0.json  BUILTIN_COVERAGE_v2_16_0.json  BUILTIN_COVERAGE_v2_9_0.json  COMPILE_ORACLE_v2_15_0.json  COMPILE_ORACLE_v2_20_0_PENDING.json  CONTRIBUTING.md  CORPUS_RUN_v2_12_0.json  CORPUS_RUN_v2_12_0_ENV_BLOCKED.md  CORPUS_RUN_v2_15_1.json  COVERAGE_FINAL.md  COVERAGE_v2_14_0.md  COVERAGE_v2_16_0.md  COVERAGE_v2_17_0.md  COVERAGE_v2_18_0.md  COVERAGE_v2_20_0.md  DIAGNOSTICS_INVALID_ALL_v2_17_0.json  Dockerfile  GOLDEN_FIXTURE_REPORT_v2_15_0.json  IMPLEMENTATION_REPORT.md  LAYOUT_SNAPSHOT_v2_18_0.json  MYPY_BASELINE_v2_14_0.md  OPTIMIZER_CONTRACT_v2_20_0.json  PERFORMANCE_BASELINE_v2_15_1.json  PERF_BASELINE_v2_15_1.json  QUALITY_GATE_LOCAL_v2_14_0.json  QUALITY_GATE_LOCAL_v2_15_0.json  QUALITY_GATE_LOCAL_v2_20_0.json  QUALITY_GATE_v2_14_0.json  QUALITY_GATE_v2_16_0.json  QUALITY_GATE_v2_8_0.json  README.md  RELEASE_MANIFEST_v2_15_1.json  RELEASE_MANIFEST_v2_16_0_oracle_pending.json  RELEASE_MANIFEST_v2_17_0_oracle_pending.json  RELEASE_MANIFEST_v2_18_0_oracle_pending.json  RELEASE_MANIFEST_v2_19_0_oracle_pending.json  (+15 more)
TV_ORACLE_EVIDENCE_AUTHED_FRESH_12_20260428/: declarations_core__export_udt_decl.body.txt  layout_wrapping__wrapped_array_from.body.txt  layout_wrapping__wrapped_binary_expr.body.txt  layout_wrapping__wrapped_function_body.body.txt  layout_wrapping__wrapped_indicator_args.body.txt  layout_wrapping__wrapped_ternary_expr.body.txt  results.json  types_udt_enum_methods__enum_input_options.body.txt  types_udt_enum_methods__enum_switch_values.body.txt  types_udt_enum_methods__export_method_library.body.txt  types_udt_enum_methods__method_with_param.body.txt  types_udt_enum_methods__nested_udt_fields.body.txt  types_udt_enum_methods__udt_constructor_method.body.txt
TV_ORACLE_EVIDENCE_FINAL_EXTERNAL_TAIL_20260428/: after_pine_editor_attempt.html  after_pine_editor_attempt.txt  chart_initial.html  chart_initial.txt  one_after_add.body.txt  one_after_add.html  one_after_set.body.txt  one_after_set.html  one_before_set.body.txt  one_before_set.html  one_compile_result.json  smoke_result.json
TV_ORACLE_EVIDENCE_v3_10_ATTEMPT_20260428/: after_pine_click.body.txt  after_pine_click.dom.json  editor_probe.json  headless_access_probe.json  layout_wrapping__wrapped_binary_expr.body.txt  layout_wrapping__wrapped_binary_expr.json  layout_wrapping__wrapped_binary_expr_monaco.body.txt  monaco_set_probe.body.txt  platform_blocked_manifest.json
TV_ORACLE_EVIDENCE_v3_3/: indicator_closedtrades_forbidden.pine.body.txt  indicator_closedtrades_forbidden.pine.dom.json  indicator_strategy_equity_forbidden.pine.body.txt  indicator_strategy_equity_forbidden.pine.dom.json  indicator_strategy_long_allowed.pine.body.txt  indicator_strategy_long_allowed.pine.dom.json  library_strategy_long_allowed.pine.body.txt  library_strategy_long_allowed.pine.dom.json  results.json  strategy_closedtrades_allowed.pine.body.txt  strategy_closedtrades_allowed.pine.dom.json
TV_ORACLE_EVIDENCE_v3_9_EXPANSION_20260427/: collections__array_first_last.body.txt  collections__array_first_last.dom.json  collections__array_from_mixed_numeric.body.txt  collections__array_from_mixed_numeric.dom.json  collections__array_method_get.body.txt  collections__array_method_get.dom.json  collections__array_new_get.body.txt  collections__array_new_get.dom.json  collections__map_new_get.body.txt  collections__map_new_get.dom.json  collections__matrix_new_get.body.txt  collections__matrix_new_get.dom.json  declarations_core__export_udt_decl.body.txt  declarations_core__export_udt_decl.dom.json  declarations_core__function_defaults_decl.body.txt  declarations_core__function_defaults_decl.dom.json  declarations_core__import_alias_decl.body.txt  declarations_core__import_alias_decl.dom.json  declarations_core__indicator_minimal_decl.body.txt  declarations_core__indicator_minimal_decl.dom.json  declarations_core__library_export_function.body.txt  declarations_core__library_export_function.dom.json  declarations_core__strategy_decl_params.body.txt  declarations_core__strategy_decl_params.dom.json  layout_wrapping__wrapped_array_from.body.txt  layout_wrapping__wrapped_array_from.dom.json  layout_wrapping__wrapped_binary_expr.body.txt  layout_wrapping__wrapped_binary_expr.dom.json  layout_wrapping__wrapped_call_args.body.txt  layout_wrapping__wrapped_call_args.dom.json  layout_wrapping__wrapped_function_body.body.txt  layout_wrapping__wrapped_function_body.dom.json  layout_wrapping__wrapped_indicator_args.body.txt  layout_wrapping__wrapped_indicator_args.dom.json  layout_wrapping__wrapped_ternary_expr.body.txt  layout_wrapping__wrapped_ternary_expr.dom.json  request_inputs_strategy__input_int_bounds.body.txt  request_inputs_strategy__input_int_bounds.dom.json  request_inputs_strategy__input_source_strategy_state.body.txt  request_inputs_strategy__input_source_strategy_state.dom.json  (+32 more)
benchmarks/: parse_corpus.py
docs/: P1_5_PERFORMANCE.md  P1_6_SECURITY.md  P2_1_LOOP_DOS.md  P2_2_AUDIT_LOGGING.md  SPEC_100_PERCENT_ADDENDUM.md  SPEC_100_PERCENT_COVERAGE.md  TZ_PRODUCT_READINESS.md  ast2python_contract.md  ast_schema.md  builtin_registry.md  compile_oracle.md  coverage_policy.md  current_limitations_v3_9.md  diagnostics.md  grammar.md  optimizer_contract.md  optimizer_inspect_contract.md  parser_architecture.md  release_checklist.md  runtime_contract_v1_4_frontend_mapping.md  semantic_model.md
pine2ast/: __init__.py  __main__.py  api.py  audit.py  benchmark.py  cli.py  (+5 more)
(+796 files in other folders)
