[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pine2ast"
version = "2.17.0"
description = "Pine Script v6 to AST parser prototype with lexer, layout, semantic diagnostics and CLI"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Interpipe Solutions"}]
dependencies = []

[project.urls]
Homepage = "https://github.com/s7cret/pine2ast"
Repository = "https://github.com/s7cret/pine2ast"
Issues = "https://github.com/s7cret/pine2ast/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.6",
  "black>=24",
  "mypy>=1.10",
]

[project.scripts]
pine2ast = "pine2ast.cli:main"

[tool.setuptools.packages.find]
include = ["pine2ast*"]

[tool.setuptools.package-data]
pine2ast = ["semantic/*.json", "runtime_contract_v1_4/*.json", "reference_catalog/*.json"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration"]
addopts = "-q --import-mode=importlib"
pythonpath = ["."]
python_files = ["test_*.py"]

[tool.coverage.run]
branch = true
source = ["pine2ast"]
omit = [
  "pine2ast/__main__.py",
  "pine2ast/benchmark.py",  # timing-sensitive helper covered by smoke tests, excluded from threshold math
  "pine2ast/layout/indentation.py",
  "pine2ast/layout/line_wrapping.py",
  "pine2ast/testing/fixtures.py",
  "pine2ast/lexer/trivia.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 87
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]

[tool.mypy]
python_version = "3.11"
packages = ["pine2ast"]
exclude = [
  "^build/",
  "^dist/",
  "^\\.setuptools-build/",
  "^tests/",
  "^tools/",
]
ignore_missing_imports = true
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
